@@ -32,7 +32,7 @@ allprojects{
 
     ext{
         versionNumber = '6'
-        if(!project.hasProperty("versionModifier")) versionModifier = 'alpha'
+        if(!project.hasProperty("versionModifier")) versionModifier = 'beta'
         if(!project.hasProperty("versionType")) versionType = 'official'
         appName = 'Mindustry'
         steamworksVersion = '891ed912791e01fe9ee6237a6497e5212b85c256'
@@ -173,23 +173,38 @@ allprojects{
     }
 
     tasks.withType(JavaCompile){
-        sourceCompatibility = 1.8
-        targetCompatibility = 1.8
+        targetCompatibility = 8
+        sourceCompatibility = 14
         options.encoding = "UTF-8"
         options.compilerArgs += ["-Xlint:deprecation"]
     }
 }
 
-//compile with java 8 compatibility for everything except the annotati project
+configure(project(":annotations")){
+    tasks.withType(JavaCompile){
+        targetCompatibility = 8
+        sourceCompatibility = 8
+    }
+}
+
+//compile with java 8 compatibility for everything except the annotation project
 configure(subprojects - project(":annotations")){
     tasks.withType(JavaCompile){
         if(JavaVersion.current() != JavaVersion.VERSION_1_8){
-            options.compilerArgs.addAll(['--release', '8'])
+            options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
+        }
+
+        doFirst{
+            options.compilerArgs = options.compilerArgs.findAll{it != '--enable-preview' }
         }
     }
 
     tasks.withType(Javadoc){
-       options.addStringOption('Xdoclint:none', '-quiet')
+        options{
+            addStringOption('Xdoclint:none', '-quiet')
+            addBooleanOption('-enable-preview', true)
+            addStringOption('-release', '14')
+        }
     }
 }
 
@@ -247,6 +262,8 @@ project(":ios"){
 project(":core"){
     apply plugin: "java-library"
 
+    compileJava.options.fork = true
+
     task preGen{
         outputs.upToDateWhen{ false }
         generateLocales()
@@ -288,6 +305,8 @@ project(":core"){
 
         compileOnly project(":annotations")
         annotationProcessor project(":annotations")
+        annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
+
     }
 }
 
